# hdx-scraper-ccvi

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/ccvi/: __main__.py  pipeline.py
src/hdx/scraper/ccvi/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pipeline.py
